Added: Scroll to toggle fullscreen

--- a/TweeBox/Base.lproj/Main.storyboard
+++ b/TweeBox/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="GO!"/>
                                 <connections>
-                                    <segue destination="c0G-tD-z40" kind="showDetail" identifier="login" id="lbx-3W-IeN"/>
+                                    <segue destination="fLz-PT-jrb" kind="showDetail" identifier="login" id="lbx-3W-IeN"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -590,12 +590,13 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oQt-Fg-ncE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1565.5999999999999" y="123.68815592203899"/>
+            <point key="canvasLocation" x="2504.8000000000002" y="123.68815592203899"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Timeline-->
         <scene sceneID="1uf-C6-ebH">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="c0G-tD-z40" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="c0G-tD-z40" customClass="ScrollingNavigationController" customModule="AMScrollingNavbar" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Timeline" id="w4k-m8-5Yz"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xgu-3p-NuR">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -608,7 +609,24 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pnZ-sW-rzB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="801" y="124"/>
+            <point key="canvasLocation" x="1740" y="123.68815592203899"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="NXx-I6-TFX">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="fLz-PT-jrb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="7GS-ne-tWr">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="c0G-tD-z40" kind="relationship" relationship="viewControllers" id="PDZ-Da-v4X"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hB5-OS-ObR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="800.79999999999995" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
